--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,8 @@ h1{
     font-size: 40px;
     font-family:'Courier New', Courier, monospace;
 }
+img{
+    width: 400px;
+    height: 450px;
+    
+}
