--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@ h1{
     border: 5px solid black;
     color: white;
     padding: 30px;
+    margin: 20px;
     border-radius: 10px;
     font-size: 40px;
     font-family:'Courier New', Courier, monospace;
@@ -10,5 +11,22 @@ h1{
 img{
     width: 400px;
     height: 450px;
+    box-shadow: 10px;
+    margin: 20px;
+ }
+ p{
+    border: 10px solid violet;
+    border-radius: 20px;
+    margin: 20px;
+    padding: 30px;
+    background-color: aquamarine;
+    color:gray
     
-}
+ }
+ #repo{
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    text-align: justify;
+
+ }
